Update and rename config.env.example to config.env

--- a/VideoEncoder/config.env
+++ b/VideoEncoder/config.env
@@ -14,10 +14,10 @@
 # You should have received a copy of the GNU Affero General Public License
 # along with this program.  If not, see <https://www.gnu.org/licenses/>.
 
-# Basics #
-API_ID = 
-API_HASH = ""
-BOT_TOKEN = ""
+
+API_ID = 2712818
+API_HASH = "fda406cc4f648c303a0fb77255f2a026"
+BOT_TOKEN = "5419604473:AAH7OZa-HcflINGn1YZlWDg2fApSgLQrHXk"
 
 # Authorization #
 SUDO_USERS = "" # List of sudo user's id, separated by space.
